--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 	<link rel="shortcut icon" href="./logo.ico">
 	<link rel="stylesheet" type="text/css" href="./css/index.css">
 	<link rel="stylesheet" type="text/css" href="./css/reset.css">
-	<link rel="stylesheet" type="text/css" href="./css/swiper-3.4.2.min.css">
-
+	<script type="text/javascript" src="./js/Browser.js"></script>
 </head>
 <body>
 	<div id="shouye">
@@ -69,7 +68,7 @@
 					<div class="swiper-container">
 					    <div class="swiper-wrapper">
 					        <div class="swiper-slide">
-					        	<a href="##">
+					        	<a href="##" >
 					        		<img src="./images/lunbo.jpg" class="swiper-lazy">
 					        		<div class="swiper-lazy-preloader"></div>
 					        	</a>
@@ -94,9 +93,20 @@
 					        </div>
 					    </div>
 					    <!-- 如果需要分页器 -->
-					    <div class="swiper-pagination"></div>
+					    <script type="text/javascript">
+					    	var mB=myBrowser();
+					    	 if('Firefox'==mB || 'Chrome'==mB|| 'Opera' ==mB || 'Safari'==mB){
+					    	 	document.write('<div class="swiper-pagination"></'+'div>')
+					    	 }
+					    </script>
 					</div>
-									</div>
+					<script type="text/javascript">
+						var mB=myBrowser();
+					    	 if('IE'==mB){
+					    	 	document.write('<div class="pagination"></'+'div>')
+					    	 }
+					</script>
+				</div>
 				<div class="navlist">
 					<ul>
 						<li>
@@ -250,7 +260,20 @@
 	</div>
 </body>
 	<script type="text/javascript" src="./js/jquery-1.11.2.js"></script>
-	<script type="text/javascript" src="./js/swiper-3.4.2.min.js"></script>
 	<script type="text/javascript" src="./js/index.js"></script>
+	<script type="text/javascript">
+		  var mB=myBrowser();
+		  if('Firefox'==mB || 'Chrome'==mB|| 'Opera' ==mB || 'Safari'==mB){
+			  	document.write('<link rel="stylesheet" type="text/css" href="./css/swiper-3.4.2.min.css"/>'+
+			  		'<script type="text/javascript" src="./js/swiper-3.4.2.min.js"></'+'script>'
+			  		)
+		  		
+		  }
+		  else if('IE'==mB){
+				document.write('<link rel="stylesheet" type="text/css" href="./css/idangerous.swiper2.7.6.css"/>'+
+			  		'<script src="./js/idangerous.swiper2.7.6.min.js"></'+'script>'
+			  		)
+		  };
+	</script>
 
 </html>
